--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ const DEFAULT_SAVINGS_HISTORY = [];
 const DEFAULT_SAVINGS_SNAP_DAYS   = [1, 15];
 const DEFAULT_SAVINGS_SNAP_ACTIVE = true;
 const DEFAULT_CARD_DEBIT_DATES = {}; // { [accountId]: { [monthKey]: dateString } }
+const DEFAULT_SHOW_FUTURE_TX = true;
 const DEFAULT_ACCOUNTS = [
   { id: genId(), name: "Compte courant", type: "checking", balance: 0 },
 ];
@@ -244,6 +245,7 @@ function useStore(uid, email) {
   const [savingsSnapDays,   setSavingsSnapDays]   = useState(DEFAULT_SAVINGS_SNAP_DAYS);
   const [savingsSnapActive, setSavingsSnapActive] = useState(DEFAULT_SAVINGS_SNAP_ACTIVE);
   const [cardDebitDates,    setCardDebitDates]    = useState(DEFAULT_CARD_DEBIT_DATES);
+  const [showFutureTx,      setShowFutureTx]      = useState(DEFAULT_SHOW_FUTURE_TX);
   const saveTimer = useRef(null);
   const loadedRef = useRef(false); // true once Firestore data is fully loaded
 
@@ -270,6 +272,7 @@ function useStore(uid, email) {
         setSavingsSnapDays(data.savingsSnapDays || DEFAULT_SAVINGS_SNAP_DAYS);
         setSavingsSnapActive(data.savingsSnapActive !== undefined ? data.savingsSnapActive : DEFAULT_SAVINGS_SNAP_ACTIVE);
         setCardDebitDates(data.cardDebitDates || DEFAULT_CARD_DEBIT_DATES);
+        setShowFutureTx(data.showFutureTx !== undefined ? data.showFutureTx : DEFAULT_SHOW_FUTURE_TX);
         snapDaysRef.current   = data.savingsSnapDays   || DEFAULT_SAVINGS_SNAP_DAYS;
         snapActiveRef.current = data.savingsSnapActive !== undefined ? data.savingsSnapActive : DEFAULT_SAVINGS_SNAP_ACTIVE;
       } else {
@@ -282,7 +285,7 @@ function useStore(uid, email) {
         setAccounts(initAccts);
         setSavingsHistory(initHistory);
         setCardDebitDates(initCdd);
-        fbSave(uid, { transactions:initTx, templates:DEFAULT_TPL, accounts:initAccts, cleanupDay:DEFAULT_CLEANUP_DAY, autoCleanup:DEFAULT_AUTO_CLEANUP, savingsHistory:initHistory, savingsSnapDays:DEFAULT_SAVINGS_SNAP_DAYS, savingsSnapActive:DEFAULT_SAVINGS_SNAP_ACTIVE, cardDebitDates:initCdd });
+        fbSave(uid, { transactions:initTx, templates:DEFAULT_TPL, accounts:initAccts, cleanupDay:DEFAULT_CLEANUP_DAY, autoCleanup:DEFAULT_AUTO_CLEANUP, savingsHistory:initHistory, savingsSnapDays:DEFAULT_SAVINGS_SNAP_DAYS, savingsSnapActive:DEFAULT_SAVINGS_SNAP_ACTIVE, cardDebitDates:initCdd, showFutureTx:DEFAULT_SHOW_FUTURE_TX });
       }
       loadedRef.current = true;
       setReady(true);
@@ -290,7 +293,7 @@ function useStore(uid, email) {
   }, [uid]);
 
   // ── Auto-save to Firestore (debounced 1s) ───────────────────────────────
-  const persist = useCallback((tx, tpl, acct, cd, ac, sh, ssd, ssa, cdd) => {
+  const persist = useCallback((tx, tpl, acct, cd, ac, sh, ssd, ssa, cdd, sft) => {
     if (!uid || !ready) return;
     if (saveTimer.current) clearTimeout(saveTimer.current);
     saveTimer.current = setTimeout(() => {
@@ -300,7 +303,7 @@ function useStore(uid, email) {
         Object.keys(t).forEach(k => { if (t[k] !== undefined) clean[k] = t[k]; });
         return clean;
       });
-      fbSave(uid, { transactions: cleanTx, templates: tpl, accounts: acct, cleanupDay: cd, autoCleanup: ac, savingsHistory: sh, savingsSnapDays: ssd, savingsSnapActive: ssa, cardDebitDates: cdd });
+      fbSave(uid, { transactions: cleanTx, templates: tpl, accounts: acct, cleanupDay: cd, autoCleanup: ac, savingsHistory: sh, savingsSnapDays: ssd, savingsSnapActive: ssa, cardDebitDates: cdd, showFutureTx: sft });
     }, 1000);
   }, [uid, ready]);
 
@@ -330,8 +333,8 @@ function useStore(uid, email) {
   }, [ready, autoCleanup, cleanupDay, cardDebitDates]);
 
   // ── Persist on every state change ───────────────────────────────────────
-  useEffect(() => { if (ready) persist(transactions, templates, accounts, cleanupDay, autoCleanup, savingsHistory, savingsSnapDays, savingsSnapActive, cardDebitDates); },
-    [transactions, templates, accounts, cleanupDay, autoCleanup, savingsHistory, savingsSnapDays, savingsSnapActive, cardDebitDates, ready, persist]);
+  useEffect(() => { if (ready) persist(transactions, templates, accounts, cleanupDay, autoCleanup, savingsHistory, savingsSnapDays, savingsSnapActive, cardDebitDates, showFutureTx); },
+    [transactions, templates, accounts, cleanupDay, autoCleanup, savingsHistory, savingsSnapDays, savingsSnapActive, cardDebitDates, showFutureTx, ready, persist]);
 
   // ── Actions ─────────────────────────────────────────────────────────────
   const add    = tx  => setTx(p => [{ ...tx, id:genId(), pointed:false }, ...p]);
@@ -457,6 +460,7 @@ function useStore(uid, email) {
     savingsHistory, addSavingsSnapshot, updateSavingsSnapshot, removeSavingsSnapshot,
     savingsSnapDays, setSavingsSnapDays, savingsSnapActive, setSavingsSnapActive,
     cardDebitDates, setCardDebitDate, clearCardDebitDate,
+    showFutureTx, setShowFutureTx,
     isDemo };
 }
 
@@ -1493,13 +1497,26 @@ function Transactions({ store, onAdd }) {
   const [clickedTxId,   setClickedTxId] = useState(null);
 
   const filtered = useMemo(()=>store.transactions.filter(t=>{
-    const ms=t.title.toLowerCase().includes(search.toLowerCase());
-    if (!ms) return false;
+    const q=search.toLowerCase().trim();
+    if (q) {
+      const matchTitle  = t.title.toLowerCase().includes(q);
+      const matchNote   = (t.note||"").toLowerCase().includes(q);
+      const matchAmount = String(t.amount).includes(q) || fmtEur(t.amount).toLowerCase().includes(q);
+      const dateFr = t.date ? t.date.split("-").reverse().join("/") : "";
+      const matchDate   = (t.date||"").includes(q) || dateFr.includes(q);
+      if (!matchTitle && !matchNote && !matchAmount && !matchDate) return false;
+    }
     if (filterAccount !== "all" && t.accountId !== filterAccount) return false;
+    if (!store.showFutureTx && !search.trim()) {
+      // Masquer les transactions futures (date strictement > aujourd'hui)
+      const today = new Date(); today.setHours(0,0,0,0);
+      const txDate = new Date(t.date + "T00:00:00");
+      if (txDate > today) return false;
+    }
     if (filterType==="card") return !!t.isCard;
     if (filterType==="all") return true;
     return t.type===filterType && !t.isCard;
-  }),[store.transactions,search,filterType,filterAccount]);
+  }),[store.transactions,search,filterType,filterAccount,store.showFutureTx]);
 
   const grouped = useMemo(()=>{
     const map={};
@@ -1533,7 +1550,7 @@ function Transactions({ store, onAdd }) {
         {/* Search bar */}
         <div style={{ display:"flex", alignItems:"center", gap:8, background:"var(--surface)", border:"1px solid var(--border)", borderRadius:"var(--radius-sm)", padding:"9px 14px", marginBottom:0 }}>
           <span style={{ color:"var(--text-muted)", fontSize:16 }}>⌕</span>
-          <input value={search} onChange={e=>setSearch(e.target.value)} placeholder="Rechercher..." style={{ flex:1, fontSize:14, color:"var(--text)", background:"transparent" }} />
+          <input value={search} onChange={e=>setSearch(e.target.value)} placeholder="Titre, montant, date, note…" style={{ flex:1, fontSize:14, color:"var(--text)", background:"transparent" }} />
           {search && <button onClick={()=>setSearch("")} style={{ background:"none", border:"none", color:"var(--text-muted)", fontSize:16, cursor:"pointer", padding:0, lineHeight:1 }}>✕</button>}
         </div>
       </div>
@@ -1672,6 +1689,18 @@ function Settings({ store, user }) {
               </div>
             </div>
             <Toggle checked={theme==="light"} onChange={toggle} />
+          </div>
+          <div style={{ borderTop:"1px solid var(--border)", display:"flex", justifyContent:"space-between", alignItems:"center", padding:"14px 16px" }}>
+            <div style={{ display:"flex", alignItems:"center", gap:10 }}>
+              <span style={{ fontSize:22 }}>📅</span>
+              <div>
+                <p style={{ fontSize:14, fontWeight:500 }}>Transactions futures dans l'historique</p>
+                <p style={{ fontSize:12, color:"var(--text-muted)" }}>
+                  {store.showFutureTx ? "Affichées — toutes les transactions apparaissent" : "Masquées — seules les transactions passées et du jour apparaissent"}
+                </p>
+              </div>
+            </div>
+            <Toggle checked={store.showFutureTx} onChange={()=>store.setShowFutureTx(!store.showFutureTx)} />
           </div>
         </Section>
 
